--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
 	</dependency>
 
 
-
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
+		</dependency>
 
 
 
