--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,19 @@
 			<version>6.14.3</version>
 		</dependency>
 
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.0.7</version>
+	</dependency>
 
 
+<dependency>
+	<groupId>xml-apis</groupId>
+	<artifactId>xml-apis</artifactId>
+	<version>1.4.01</version>
+</dependency>
 
 
 
